Fixed clipped icons

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -809,6 +809,11 @@ div.error {
   .jumbotron ul.details {
       font-size: 14px;
        width: 90%;
+
+       li {
+          background-size: 16px 16px;
+          padding-left: 25px;
+       }
   }
 
   .jumbotron p {
